updated swagger for inventory routes
