# middleware/validate.js
@@ -20,6 +20,27 @@ const saveClient = (req, res, next) => {
     });
 };
 
+const saveItem = (req, res, next) => {
+    const valRule = {
+        itemName: 'required|string',
+        price: 'required|int',
+        location: 'required|string',
+        description: 'required|string',
+        sold: 'required|boolean'
+    };
+    validator(req.body, valRule, {}, (err, status) =>{
+        if(!status){
+            res.status(412).send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+        } else {
+            next();
+        }
+    });
+};
+
 const idLengthCheck = (req, res, next) => {
     const valRule = {
         id: 'string|min:24'
@@ -39,5 +60,6 @@ const idLengthCheck = (req, res, next) => {
 
 module.exports = {
     saveClient,
-    idLengthCheck
+    idLengthCheck,
+    saveItem
 }
